Fix video border radius to align with Table view browser recordings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,7 @@ hr {
 }
 
 .project__image--browser {
-	border-radius: 6px;
+	border-radius: 10px;
 }
 
 .project-details {
